"""
Intent Recognition Service Interface

This service is responsible for analyzing and recognizing user intent.
It is not dependent on any specific NLU service (e.g., AWS Lex).
"""

from typing import Dict, Any

class IntentRecognitionService: 
    """Defines the interface for the intent recognition service"""
    
    def recognize_intent(self, query: str) -> Dict[str, Any]:
        """
        Recognize intent from user query
        
        Args:
            query: User input query
            
        Returns:
            Dictionary containing recognized intent and related data
        """
        # This interface requires actual implementation
        # Basic implementation returns dummy intent data
        return {
            'intent': 'unknown',
            'confidence': 0.0,
            'slots': {}
        } 