"""
Medical Information Service Interface

This service provides information about pharmaceuticals and medical topics.
It is not dependent on any specific database or storage service.
"""

from typing import Dict, Any

class MedicalInfoService:
    """Defines the interface for the medical information service"""
    
    def initialize(self):
        """Initialize the service"""
        pass
        
    def cleanup(self):
        """Clean up the service"""
        pass
    
    def get_medical_info(self, intent_data: Dict[str, Any]) -> Dict[str, Any]:
        """
        Retrieve medical information based on intent data
        
        Args:
            intent_data: Recognized intent and slot data
            
        Returns:
            Dictionary containing medical information
        """
        # This interface requires actual implementation
        # Basic implementation returns dummy data
        return {
            'status': 'success',
            'response': 'Sorry, I don\'t have information on that yet.',
            'data': {}
        } 